# quad-antenna

./: README.md  pyproject.toml
src/: Vehicle.py  calculators.py  connection.py  main.py  mav-ctrl.py  test-code.py  test.py  vehicleControl.py  vehicleControll.py
src/mavSDK/: Vehicle.py  main.py  niceGUI-example.py  niceGUI-quad-plane-example.py
utilities/: mav-redirect.ps1  mav-redirect.sh
