[project]
name = "quad-antena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastcrc==0.3.5",
    "lxml==6.0.2",
    "mavproxy==1.8.74",
    "numpy==2.2.6",
    "pymavlink==2.4.49",
    "pynmeagps==1.1.2",
    "pyserial==3.5",
]
